--- a/app/templates/shared/base.html
+++ b/app/templates/shared/base.html
@@ -31,7 +31,7 @@
     <div class="main">{% block content %} {% endblock %}</div>
 
     <!-- Botão volta ao topo -->
-    <div class="smoothscroll-top">
+    <div class="seta-top">
       <span class="scroll-top-inner">
         <i class="fa fa-2x fa-arrow-circle-up"></i>
       </span>
