--- a/app/static/scss/layouts/anime.scss
+++ b/app/static/scss/layouts/anime.scss
@@ -1,212 +1,45 @@
-.main {
-  span,
-  p,
-  li {
-    color: #2c3e50;
+.a4 {
+  color: #2c3e50 !important;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+
+  .pessoal {
+    background-color: #fff;
+    .nome {
+      background: url("../img/aldeia-naruto.png");
+      background-repeat: no-repeat;
+      background-position: top 10px right 10px;
+      background-size: 50px auto;
+      color: #bc6c25;
+      background-color: #fec89a;
+    }
   }
-  .row {
-    -webkit-box-direction: reverse;
-    -ms-flex-direction: row-reverse;
-    flex-direction: row-reverse;
+
+  .profissional {
+    background: url("../img/kakashi.jpg"), url("../img/simbolo-naruto.png"),
+      url("../img/naruto.jpg");
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    background-position: bottom 0px left 170px, top -25px right 0px,
+      bottom 2px left 100px;
+    background-size: 250px auto, auto 310px, 110px auto;
+    background-color: #fff;
+
+    .assinatura {
+      margin: 2rem;
+      img {
+        float: right;
+        -webkit-filter: none;
+        filter: none;
+      }
+      .cpfass {
+        margin-left: auto;
+        margin-right: 1rem;
+        font-family: "Patrick Hand", cursive;
+        margin-top: -0.5rem;
+        width: 9rem;
+        border-top: dotted 1px #ddd;
+      }
+    }
   }
-}
-
-.main .pessoal {
-  background: url("../img/naruto.jpg");
-  background-repeat: no-repeat;
-  background-position: bottom 2px left 15px;
-  background-size: 110px auto;
-}
-
-.main .profissional {
-  background: url("../img/kakashi.jpg"), url("../img/simbolo-naruto.png");
-  background-repeat: no-repeat, no-repeat;
-  background-position: bottom 0px left 170px, top -25px right 0px;
-  background-size: 250px auto, auto 310px;
-}
-
-.main .header i {
-  color: #273746;
-}
-
-.main i {
-  color: #273746;
-}
-
-.main .nome {
-  background: url("../img/aldeia-naruto.png");
-  background-repeat: no-repeat;
-  background-position: top 10px right 10px;
-  background-size: 50px auto;
-  background-color: #f5f5f5;
-}
-
-.main .nome h3,
-.main .nome h5,
-.main .nome p {
-  color: #e67e22;
-}
-
-.main .nome-bg {
-  background-color: transparent;
-  color: #e67e22;
-  opacity: 1;
-}
-
-.nome {
-  background-color: #333;
-  opacity: 0.7;
-  padding-top: 1rem;
-  position: relative;
-  top: -10px;
-  right: 0;
-  left: 0;
-  width: auto;
-  height: 135px;
-}
-
-.nome .firstname {
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 2.5rem;
-  color: #fff;
-  margin-bottom: 0 !important;
-  margin-left: 2rem;
-}
-
-.nome .secondname {
-  font-family: "PT Sans Narrow", sans-serif;
-  color: #fff;
-  font-size: 1.8rem;
-  margin-bottom: 0.3rem !important;
-  margin-left: 2rem;
-}
-
-.nome .cargo {
-  font-family: "PT Sans Narrow", sans-serif;
-  text-align: center;
-  font-size: 1rem;
-  color: #fff;
-}
-
-.descricao p {
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 1rem;
-  padding-right: 0.8rem;
-}
-
-.image {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 0 !important;
-  padding: 0 !important;
-  position: relative;
-}
-
-.sobre {
-  position: relative;
-  padding: 3rem 0 0 1rem;
-  margin-bottom: 0 !important;
-}
-
-.sobre .descricao p {
-  font-size: 1rem;
-  margin-bottom: 0.5rem !important;
-}
- 
-
-.experiencias {
-  position: relative;
-  padding: 2rem 0 0 0;
-}
-
-.experiencias .row {
-  padding-bottom: 1rem;
-}
-
-.experiencias .empresa {
-  padding: 0 0 0 0.5rem;
-}
-
-.experiencias .empresa p {
-  margin: 0 0 0.3rem 0;
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 0.7rem;
-}
-
-.experiencias .empresa p:first-of-type {
-  font-family: "PT Sans Narrow", sans-serif;
-  color: #2c3e50;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.experiencias .atividades p:first-of-type {
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 1rem;
-  font-weight: bold;
-  padding-bottom: 0.5rem;
-}
-
-.experiencias .atividades p {
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 0.9rem;
-  width: 95%;
-  margin-bottom: 0;
-}
-
-.varios {
-  position: relative;
-  padding: 2rem 0 0 0;
-}
-
-.varios .formacao p:first-of-type {
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 0.9rem;
-}
-
-.varios .formacao {
-  position: relative;
-}
-
-.varios .idioma {
-  position: relative;
-  padding-right: 7.2rem;
-}
-
-.varios .descricao {
-  margin: 0 !important;
-  padding-left: 0.7rem !important;
-}
-
-.varios .descricao p {
-  margin: 0 0 0.3rem 0;
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 0.7rem;
-  padding: 0;
-}
-
-.assinatura {
-  display: none;
-  position: relative;
-  float: none;
-  padding: 1rem 0 0 0;
-  margin-right: 2.5rem;
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.assinatura img {
-  width: 8.5rem;
-  -webkit-filter: sepia(100%) hue-rotate(900deg) saturate(80%);
-  filter: sepia(100%) hue-rotate(900deg) saturate(80%);
-}
-
-.assinatura .cpfass {
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 1rem;
-  text-align: center;
-  border-top: solid #eee 1px;
-  padding-top: 0.5rem;
-  margin: -1.6rem 2.8rem 0;
 }
