--- a/app/static/scss/shared/print.scss
+++ b/app/static/scss/shared/print.scss
@@ -9,21 +9,23 @@
  *        [- Font modified May 6, 2022 by marcelo maia -]
  *                                           
  * ------------------------------------------------------------ */
-.sidenav, .seta-top, .navbar {
+body {
+  .sidenav,
+  .seta-top,
+  .navbar {
     display: none;
-}
-.main {
+  }
+  .main {
     margin: 0px;
     padding: 0px;
-}
-.a4 {
-    width: 100% !important;
-    height: 80% !important;
-    border: 1px solid #e5e5e5 !important;
-    margin: 0px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-@page {
-    margin: 1rem 1rem 0 1rem;
+    .a4 {
+      width: 100% !important;
+      height: 80% !important;
+      border: 1px solid #e5e5e5 !important;
+      margin: 0px !important;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    //   background-color: #fff;
+    }
+  }
 }
