--- a/app/templates/curriculo/curriculo.html
+++ b/app/templates/curriculo/curriculo.html
@@ -305,22 +305,19 @@
     <!-- Info: Assinatura -->
     <div class="assinatura">
       <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-          <div class="imgass">
-            <img
-              src="{{url_for('static', filename='img/assinatura.png')}}"
-              class="img-fluid"
-              alt="..."
-            />
-          </div>
-          <div class="cpfass">
-            <span>Ass: Marcelo Maia</span>
-          </div>
+        <div class="imgass">
+          <img
+            src="{{url_for('static', filename='img/assinatura.png')}}"
+            class="img-fluid"
+            alt="..."
+          />
         </div>
-        <div class="col-3"></div>
+        <div class="cpfass">
+          <span>Marcelo Maia</span>
+        </div>
       </div>
     </div>
+
   </div>
 </div>
 {% endblock %} {% block js %}
