--- a/app/static/scss/layouts/metal.scss
+++ b/app/static/scss/layouts/metal.scss
@@ -1,26 +1,44 @@
+$A4-color: #fff;
+$pessoal-background-color: #e5e5e5;
+$nome-background-color: #333;
+$profissional-experiencias-empresa-nome: #fff;
+$A4-webkit-box-direction: reverse;
+$A4-ms-flex-direction: row-reverse;
+$A4-flex-direction: row-reverse;
+$pessoal-nome-background-color: #333;
+$profissional-background: url("../img/metal.jpg");
+$profissional-background-repeat: repeat;
+$profissional-background-position: left top 0px;
+$profissional-experiencias-empresa-nome: #fff;
+
+$profissional-varios-formacao-instituicao-color: #fff;
+$profissional-varios-formacao-instituicao-font-weight: bold;
+
+
+
 .a4 {
-  -webkit-box-direction: reverse;
-  -ms-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-  color: #fff;
+  -webkit-box-direction: $A4-webkit-box-direction;
+  -ms-flex-direction: $A4-ms-flex-direction;
+  flex-direction: $A4-flex-direction;
+  color: $A4-color;
   .pessoal {
-    background-color: #666;
+    background-color: $body-background-color;
     float: right;
 
     .nome {
-      background-color: #333;
+      background-color: $pessoal-nome-background-color;
     }
   }
 
   .profissional {
-    background: url("../img/metal.jpg");
-    background-repeat: repeat;
-    background-position: left top 0px;
+    background: $profissional-background;
+    background-repeat: $profissional-background-repeat;
+    background-position: $profissional-background-position;
 
     .experiencias {
       .empresa {
         .nome {
-          color: #fff;
+          color: $profissional-experiencias-empresa-nome;
         }
       }
     }
@@ -29,8 +47,8 @@
       .row {
         .formacao {
           .instituicao {
-            color: #fff;
-            font-weight: bold;
+            color: $profissional-varios-formacao-instituicao-color;
+            font-weight: $profissional-varios-formacao-instituicao-font-weight;
           }
         }
       }
@@ -38,137 +56,3 @@
 
   }
 }
-
-// .main {
-//   // span,
-//   // p,
-//   // li {
-//   //   // color: white;
-//   // }
-//   // .row {
-//   //   -webkit-box-direction: reverse;
-//   //   -ms-flex-direction: row-reverse;
-//   //   flex-direction: row-reverse;
-//   // }
-//   .pessoal {
-//     // background-color: #666 !important;
-//     // float: right;
-//     // i {
-//     //   // color: #fff;
-//     // }
-//     .nome {
-//       background-color: #333;
-//     }
-//   }
-//   // .profissional {
-//   //   background: url("../img/metal.jpg");
-//   //   background-repeat: repeat;
-//   //   background-position: left top 0px;
-//   // }
-// }
-
-// .descricao p {
-//   font-family: "PT Sans Narrow", sans-serif;
-//   font-size: 1rem;
-//   padding-right: 0.8rem;
-// }
-
-// .image {
-//   display: block;
-//   max-width: 100%;
-//   height: auto;
-//   margin-bottom: 0 !important;
-//   padding: 0 !important;
-//   position: relative;
-// }
-
-// .sobre {
-//   position: relative;
-//   padding: 3rem 0 0 1rem;
-//   margin-bottom: 0 !important;
-// }
-
-// .sobre .descricao p {
-//   font-size: 1rem;
-//   margin-bottom: 0.5rem !important;
-// }
-
-// .linkedin span {
-//   font-size: 0.7rem !important;
-// }
-
-// .experiencias .empresa p:first-of-type {
-//   font-family: "PT Sans Narrow", sans-serif;
-//   color: #fff;
-//   font-size: 0.9rem;
-//   font-weight: bold;
-// }
-
-// .experiencias .atividades p:first-of-type {
-//   font-family: "PT Sans Narrow", sans-serif;
-//   font-size: 1rem;
-//   font-weight: bold;
-//   padding-bottom: 0.5rem;
-// }
-
-// .experiencias .atividades p {
-//   font-family: "PT Sans Narrow", sans-serif;
-//   font-size: 0.9rem;
-//   width: 95%;
-//   margin-bottom: 0;
-// }
-
-// .varios {
-//   position: relative;
-//   padding: 2rem 0 0 0;
-// }
-
-// .varios .formacao p:first-of-type {
-//   font-family: "PT Sans Narrow", sans-serif;
-//   font-size: 0.9rem;
-// }
-
-// .varios .formacao {
-//   position: relative;
-// }
-
-// .varios .idioma {
-//   position: relative;
-//   padding-right: 1.2rem;
-// }
-
-// .varios .descricao {
-//   margin: 0 !important;
-//   padding-left: 0.7rem !important;
-// }
-
-// .varios .descricao p {
-//   margin: 0 0 0.3rem 0;
-//   font-family: "PT Sans Narrow", sans-serif;
-//   font-size: 0.7rem;
-//   padding: 0;
-// }
-
-// .assinatura {
-//   position: relative;
-//   float: none;
-//   padding: 1rem 0 0 0;
-//   margin-right: 2.5rem;
-//   margin-top: 1rem;
-//   text-align: center;
-// }
-
-// .assinatura img {
-//   width: 8.5rem;
-//   -webkit-filter: sepia(100%) hue-rotate(900deg) saturate(80%);
-//   filter: sepia(100%) hue-rotate(900deg) saturate(80%);
-// }
-
-// .assinatura .cpfass {
-//   font-family: "PT Sans Narrow", sans-serif;
-//   font-size: 1rem;
-//   text-align: center;
-//   border-top: solid #eee 1px;
-//   padding-top: 0.5rem;
-//   margin: -1.6rem 2.8rem 0;
-// }
