--- a/app/static/scss/shared/base.scss
+++ b/app/static/scss/shared/base.scss
@@ -157,11 +157,12 @@ body {
     .sobre,
     .contato,
     .hobbies {
+      margin-top: 2.5rem;
       padding-left: 1rem;
     }
 
     .caracteristicas {
-      margin: 0rem;
+      margin: .5rem 0 0 0;
       .descricao {
         font-size: 0.8rem;
         margin-right: 0.7rem;
