--- a/app/templates/curriculo/list.html
+++ b/app/templates/curriculo/list.html
@@ -29,7 +29,7 @@
                         <a href="#" class="btn btn-dark add_new">Adicionar Novo Currículo</a>
                     </div>
 
-                    <!-- curriculo's table -->
+                    <!-- curriculo's tables -->
                     <div class="col col-sm-12">
                         <table id="tblcurriculo" class="table table-striped table-sm">
                             <thead class="thead-dark">
