--- a/app/templates/curriculo/list.html
+++ b/app/templates/curriculo/list.html
@@ -1,98 +1,126 @@
-{% extends 'shared/base.html' %} 
-
-{% block title %}Lista de Currículos {% endblock%}
-
-{% block css %}
+{% extends 'shared/base.html' %} {% block title %}Lista de Currículos {%
+endblock%} {% block css %}
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" /> -->
-<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" />
+<link
+  rel="stylesheet"
+  href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css"
+/>
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/list.min.css') }}" />
-{% endblock %}
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/list.min.css') }}"
+/>
+{% endblock %} {% block content %}
+<div class="container-fluid list-curriculo shadow p-3 mb-5 bg-body rounded">
+  <div class="row">
+    <main>
+      <div
+        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+      >
+        <h1 class="h2">Currículos Cadastrados</h1>
+      </div>
+      <div class="d-flexnavbar.minnavbar.mins conteudo">
+        {% with messages = get_flashed_messages() %} {% if messages %} {% for
+        message in messages %}
+        <div class="alert alert-success" role="alert">{{ message }}</div>
+        {% endfor %} {% endif %} {% endwith %}
 
-{% block content %}
-    <div class="container-fluid list-curriculo shadow p-3 mb-5 bg-body rounded">
-        <div class="row">
-            <main>
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Currículos Cadastrados</h1>
-                </div>
-                <div class="d-flexnavbar.minnavbar.mins conteudo">
-
-                    {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
-                    <div class="alert alert-success" role="alert">
-                        {{ message }}
-                    </div>
-                    {% endfor %} {% endif %} {% endwith %}
-
-                    <!-- Add button curriculo -->
-                     <div class="d-grid gap-2 col-4 mx-auto mb-4 mt-4 newuser">
-                        <a href="#" class="cta">
-                            <span><i class="fa-solid fa-user-plus"></i> Novo Currículo</span>
-                            <svg width="13px" height="10px" viewBox="0 0 13 10">
-                            <path d="M1,5 L11,5"></path>
-                            <polyline points="8 1 12 5 8 9"></polyline>
-                            </svg>
-                        </a>
-                     </div>
-
-                    <!-- curriculo's tables -->
-                    <div class="col col-sm-12">
-                        <table id="tblcurriculo" class="table table-striped table-sm">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th>Nome</th>
-                                    <th>Objetivo</th>
-                                    <th>Cargo</th>
-                                    <th class="no-sort"></th>
-                                    <th class="no-sort"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for c in curriculos %}
-                                <tr>
-                                    <th scope="row">{{ c['nome'] }}</th>
-                                    <td>{{ c['objetivo'] }}</td>
-                                    <td>{{ c['cargo'] }}</td>
-                                    <td class="text-center"><button type="button" class="btn btn-outline-secondary btn-xs">Editar</button></td>
-                                    <td class="text-center"><button type="button" class="btn btn-outline-danger btn-xs">Excluir</button></td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-            </main>
+        <!-- Add button curriculo -->
+        <div class="d-grid gap-2 col-4 mx-auto mb-4 mt-4 newuser">
+          <a href="#" class="cta">
+            <span><i class="fa-solid fa-user-plus"></i> Novo Currículo</span>
+            <svg width="13px" height="10px" viewBox="0 0 13 10">
+              <path d="M1,5 L11,5"></path>
+              <polyline points="8 1 12 5 8 9"></polyline>
+            </svg>
+          </a>
         </div>
-    </div>
-{% endblock %}
 
+        <!-- curriculo's tables -->
+        <div class="col col-sm-12">
+          <table id="tblcurriculo" class="table table-striped table-sm">
+            <thead class="thead-dark">
+              <tr>
+                <th>Id</th>
+                <th>Nome</th>
+                <th>Objetivo</th>
+                <th>Cargo</th>
+                <th class="no-sort"></th>
+                <th class="no-sort"></th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for c in curriculos %}
+              <tr>
+                <td>{{ c['_id'] }}</th>
+                <th scope="row">{{ c['nome'] }}</th>
+                <td>{{ c['objetivo'] }}</td>
+                <td>{{ c['cargo'] }}</td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+              </tr>
 
-{% block js %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </main>
+  </div>
+</div>
+{% endblock %} {% block js %}
 <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
 
-
-
-
 <script>
-    $(document).ready(function() {
-        
-        $('#tblcurriculo').DataTable({
-            "language": {
-                "url": "{{ url_for('static', filename='plugins/pt-BR.json') }}",
-                
-                //'../../../app/plugins/pt-BR.json'
-            },
-            "columnDefs": [{
-                "targets": 'no-sort',
-                "orderable": false,
-            }]
-        });
-
-        // table.ajax.url( 'http://127.0.0.1:3333/curriculo' ).load();    
-
-
+  $(document).ready(function () {
+    // var table = $('#myTable').DataTable();
+    var table = $("#tblcurriculo").DataTable({
+      language: {
+        url: "{{ url_for('static', filename='plugins/pt-BR.json') }}",
+      },
+      columnDefs: [
+        {
+          "targets": [0],
+          "visible": false,
+          "searchable": false
+        },
+        {
+          targets: [-2],
+          orderable: false,
+          render: function (data, type, row, meta) {
+            return (
+              '<input type="button" class="btn btn-outline-secondary btn-xs editar" id=n-"' +
+              meta.row +
+              '" value="Editar"/>'
+            );
+          },
+        },
+        {
+          targets: [-1],
+          orderable: false,
+          render: function (data, type, row, meta) {
+            return (
+              '<input type="button" class="btn btn-outline-danger btn-xs excluir" id=e-"' +
+              meta.row +
+              '" value="Excluir"/>'
+            );
+          },
+        },
+      ],     
     });
+  });
+
+  $("#tblcurriculo tbody").on("click", ".editar", function () {
+    var id = $(this).attr("id").match(/\d+/)[0];
+    var data = $("#tblcurriculo").DataTable().row(id).data();
+    console.log(data[0]);
+  });
+
+  $("#tblcurriculo tbody").on("click", ".excluir", function () {
+    var id = $(this).attr("id").match(/\d+/)[0];
+    var data = $("#tblcurriculo").DataTable().row(id).data();
+    console.log(data[1]);
+  });
 </script>
 {% endblock %}
