--- a/app/templates/curriculo/list.html
+++ b/app/templates/curriculo/list.html
@@ -114,7 +114,10 @@ endblock%} {% block css %}
   $("#tblcurriculo tbody").on("click", ".editar", function () {
     var id = $(this).attr("id").match(/\d+/)[0];
     var data = $("#tblcurriculo").DataTable().row(id).data();
-    console.log(data[0]);
+    var url = "{{ url_for('webapp.edit', id='userid') }}".replace("userid", data[0]);
+    window.location.href = url;
+
+
   });
 
   $("#tblcurriculo tbody").on("click", ".excluir", function () {
